--- a/src/css/games/thekingofthewoods.less
+++ b/src/css/games/thekingofthewoods.less
@@ -1,11 +1,39 @@
 @import "./common";
 
 html[data-theme=dark] {
+	#overall-content:before {
+		content: "";
+		background: #00000080;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+	}
+
 	.player-area {
 		background: var(--dark-back);
 	}
 
 	.zone-label {
 		color: var(--light-80);
+	}
+
+	.stockitem {
+		filter: var(--ext-bright) !important;
+	}
+
+	.round-popup {
+		color: var(--light-80);
+	}
+
+	.round-popup h2 {
+		color: var(--orange-30);
+	}
+
+	#startNextRoundBtn {
+		.blueButton();
+	}
+
+	#startNextRoundBtn:hover {
+		.blueButtonOver();
 	}
 }
